# CUDA_Prototype

./: .gitignore  README.md
convolution/: CMakeLists.txt  compare.cpp  conv_cufft.cu  conv_cufft2.cu  conv_fftw.cpp  gpuErrchk.hpp  main.cpp  main.hpp  plot_result.py  python_conv.py
convolution/overlap_example/: example  example.cu
fft/: 1dfft  1dfft.cu  1dfft_batch.cu  2dfft.cu  3dfft_multigpu.cu  example.cu  main.cpp  test  test.cu
fft/1dBench/: 1dfft.cpp  1dfft.cu  1dfft.hpp  CMakeLists.txt  main.cpp  ploting.py  result.csv
fft/2dBench/: 2dfft.cpp  2dfft.cu  2dfft.hpp  CMakeLists.txt  main.cpp  test.cpp
